AC_INIT(jpt,1.0.0)
AM_INIT_AUTOMAKE([dist-bzip2])

AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_ARG_WITH([php],
            [AS_HELP_STRING([--with-php], [build djpt PHP module<:@default=no@:>@])],
            [], [with_php=no])

AC_ARG_ENABLE(coverage, [  --enable-coverage       enable coverage testing], CFLAGS="-fprofile-arcs -ftest-coverage")
AC_ARG_ENABLE(final, [  --enable-final          enable optimization and disable debug messages], CFLAGS="-O2 -DNDEBUG")

AS_IF([test "x$with_php" != xno], AC_CONFIG_SUBDIRS([php]), [echo Not building djpt PHP module])

AC_CHECK_FUNCS(posix_memalign ffs gettimeofday)
AC_C_BIGENDIAN

if test "x$with_php" != xno; then
  MAYBE_PHP=php
else
  MAYBE_PHP=
fi
AC_SUBST([MAYBE_PHP])


AC_CONFIG_HEADER([config.h])

AC_OUTPUT([tests/Makefile Makefile])
